// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnConfiguration component should render all columns 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 2`] = `
<DocumentFragment>
  <span>
    uniprot id
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 3`] = `
<DocumentFragment>
  <div>
    <strong>
      rec full Name
    </strong>
  </div>
  <div>
    1.2.3.4
  </div>
  <div>
    recommended short name
  </div>
  <div>
    <ul
      class="expandable-list no-bullet"
    >
      <li>
        a full alt Name (short alt name1) 
      </li>
    </ul>
  </div>
  <div>
    <ul
      class="expandable-list no-bullet"
    >
      <li>
        containsrec full Name (containsrecommended short name)  
        <strong>
          Alternative names: 
        </strong>
        containsa full alt Name (containsshort alt name1) 
      </li>
    </ul>
  </div>
  <div>
    <ul
      class="expandable-list no-bullet"
    >
      <li>
        sub full Name
      </li>
    </ul>
  </div>
  <div>
    biotech
  </div>
  <div />
  <div />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 4`] = `
<DocumentFragment>
  <div>
    <strong>
      some Gene 
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://www.uniprot.org/unirule/PIRNR001360"
            target="_blank"
          >
            PIRNR001360
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
    </strong>
  </div>
  <div>
    some Syn 
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001361"
          target="_blank"
        >
          PIRNR001361
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
  <div>
    some orf 
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 publication
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Manual assertion based on experiment
        </h5>
      </div>
    </div>
  </div>
  <div>
    some locus 
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001362"
          target="_blank"
        >
          PIRNR001362
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 5`] = `
<DocumentFragment>
  scientific name (common name)  (synonyms 1)
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 6`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 7`] = `
<DocumentFragment>
  <div>
    some Gene
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 8`] = `
<DocumentFragment>
  some locus 
  <span
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion according to rules
      </h5>
      <a
        class="external-link"
        href="https://www.uniprot.org/unirule/PIRNR001362"
        target="_blank"
      >
        PIRNR001362
        <svg
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 9`] = `
<DocumentFragment>
  some orf 
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 publication
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Manual assertion based on experiment
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 10`] = `
<DocumentFragment>
  some Syn 
  <span
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion according to rules
      </h5>
      <a
        class="external-link"
        href="https://www.uniprot.org/unirule/PIRNR001361"
        target="_blank"
      >
        PIRNR001361
        <svg
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 11`] = `
<DocumentFragment>
  9606
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=9606"
    target="_blank"
  >
    NCBI
    <svg
      viewBox="0 0 576 512"
      width="12.5"
    >
      <path
        d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 12`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 13`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 14`] = `
<DocumentFragment>
  <p>
    scientific name (common name)  (synonyms 1)
  </p>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 15`] = `
<DocumentFragment>
  <p>
    This entry describes 
    <strong>
      1
    </strong>
     isoforms produced by 
    <strong>
      Alternative initiation
    </strong>
    .
  </p>
  <p>
    value1
  </p>
  <hr />
  <h3
    id="isoID1"
  >
    isoID1
  </h3>
  <div
    class="info-list"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Name
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        name
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Synonyms
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        syn value
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        value1
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 16`] = `
<DocumentFragment>
  <div
    class="action-bar button-group"
  >
    <div
      class="dropdown-container"
    >
      <button
        class="button dropdown "
        type="button"
      >
        Tools
      </button>
      <div
        class="dropdown-menu"
        style="top: 0px;"
      >
        <ul
          class="no-bullet"
        >
          <li>
            <a
              href="/blast/accession/P21802"
            >
              BLAST
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//protparam/protparam?P21802"
              rel="noopener noreferrer"
              target="_blank"
            >
              ProtParam
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//protscale/protscale.pl?P21802"
              rel="noopener noreferrer"
              target="_blank"
            >
              ProtScale
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//compute_pi/pi_tool?P21802"
              rel="noopener noreferrer"
              target="_blank"
            >
              Compute pI/Mw
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//peptide_mass/peptide-mass.pl?P21802"
              rel="noopener noreferrer"
              target="_blank"
            >
              PeptideMass
            </a>
          </li>
          <li>
            <a
              href="//web.expasy.org/cgi-bin//peptide_cutter/peptidecutter.pl?P21802"
              rel="noopener noreferrer"
              target="_blank"
            >
              PeptideCutter
            </a>
          </li>
        </ul>
      </div>
    </div>
    <button
      class="button"
      type="button"
    >
      <svg
        viewBox="0 0 576 512"
      >
        <path
          d="M576 216v16c0 13.255-10.745 24-24 24h-8l-26.113 182.788C514.509 462.435 494.257 480 470.37 480H105.63c-23.887 0-44.139-17.565-47.518-41.212L32 256h-8c-13.255 0-24-10.745-24-24v-16c0-13.255 10.745-24 24-24h67.341l106.78-146.821c10.395-14.292 30.407-17.453 44.701-7.058 14.293 10.395 17.453 30.408 7.058 44.701L170.477 192h235.046L326.12 82.821c-10.395-14.292-7.234-34.306 7.059-44.701 14.291-10.395 34.306-7.235 44.701 7.058L484.659 192H552c13.255 0 24 10.745 24 24zM312 392V280c0-13.255-10.745-24-24-24s-24 10.745-24 24v112c0 13.255 10.745 24 24 24s24-10.745 24-24zm112 0V280c0-13.255-10.745-24-24-24s-24 10.745-24 24v112c0 13.255 10.745 24 24 24s24-10.745 24-24zm-224 0V280c0-13.255-10.745-24-24-24s-24 10.745-24 24v112c0 13.255 10.745 24 24 24s24-10.745 24-24z"
        />
      </svg>
      Add
    </button>
    <div
      class="dropdown-container"
    >
      <button
        class="button dropdown "
        type="button"
      >
        Highlight
      </button>
      <div
        class="dropdown-menu"
        style="top: 0px;"
      >
        <div
          class="dropdown-menu__content"
        >
          <label
            for="P21802-Polar"
          >
            <input
              data-testid="sequence-highlight-checkbox"
              id="P21802-Polar"
              type="checkbox"
            />
            Polar
          </label>
          <label
            for="P21802-Hydrophobic"
          >
            <input
              data-testid="sequence-highlight-checkbox"
              id="P21802-Hydrophobic"
              type="checkbox"
            />
            Hydrophobic
          </label>
        </div>
      </div>
    </div>
    <button
      class="button"
      type="button"
    >
      Copy sequence
    </button>
  </div>
  <div
    class="sequence"
  >
    <div
      class="sequence__sequence"
    >
      <span
        class="sequence__sequence__chunk"
      >
        <svg
          height="30"
          width="100"
        >
          <text
            class="sequence__sequence__chunk__counter"
            x="100"
            y="10"
          >
            10
          </text>
          <text
            class="sequence__sequence__chunk__sequence"
            x="0"
            y="20"
          >
            SAPSQDFMRF
          </text>
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 17`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 18`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 19`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 20`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Molecular mass is 2.1 Da. Determined by LSI. note value 
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001361"
          target="_blank"
        >
          PIRNR001361
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 21`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 22`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 23`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 24`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 25`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 26`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at positions 
      <span>
        rna position 
        <span
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          role="button"
          tabindex="0"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              clip-rule="evenodd"
              d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
              fill="#4E5A71"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </span>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
        >
          <div>
            <h5>
              Automatic assertion according to rules
            </h5>
            <a
              class="external-link"
              href="https://www.uniprot.org/unirule/PIRNR001361"
              target="_blank"
            >
              PIRNR001361
              <svg
                viewBox="0 0 576 512"
                width="12.5"
              >
                <path
                  d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
                />
              </svg>
            </a>
          </div>
        </div>
      </span>
    </div>
    <div>
      <span>
        value 
        <span
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          role="button"
          tabindex="0"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              clip-rule="evenodd"
              d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
              fill="#4E5A71"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </span>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
        >
          <div>
            <h5>
              Automatic assertion according to rules
            </h5>
            <a
              class="external-link"
              href="https://www.uniprot.org/unirule/PIRNR001361"
              target="_blank"
            >
              PIRNR001361
              <svg
                viewBox="0 0 576 512"
                width="12.5"
              >
                <path
                  d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
                />
              </svg>
            </a>
          </div>
        </div>
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 27`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      target="_blank"
    >
      sequence
      <svg
        viewBox="0 0 576 512"
        width="12.5"
      >
        <path
          d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001361"
          target="_blank"
        >
          PIRNR001361
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 28`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 29`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 30`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 31`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <span
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://prosite.expasy.org/unirule/PRU10028"
            target="_blank"
          >
            PRU10028
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://prosite.expasy.org/unirule/PRU10028"
          target="_blank"
        >
          PRU10028
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 32`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 33`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 34`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 35`] = `
<DocumentFragment>
  <span
    class="text-block"
  >
    <strong>
      1.2.4.5
    </strong>
     some reaction
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001361"
          target="_blank"
        >
          PIRNR001361
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
    This reaction proceeds in the 
    <span
      data-testid="direction-text"
    >
      backward
    </span>
     direction 
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        Imported
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion inferred from database entries
        </h5>
        <a
          class="external-link"
          href="https://www.ensembl.org/id/ENSP0001324"
          target="_blank"
        >
          ENSP0001324
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 36`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <span>
      Cofactor Name 
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://www.uniprot.org/unirule/PIRNR001361"
            target="_blank"
          >
            PIRNR001361
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
    </span>
    <section
      class="text-block"
    >
      value2
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://www.uniprot.org/unirule/PIRNR001361"
            target="_blank"
          >
            PIRNR001361
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 37`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 38`] = `
<DocumentFragment>
  1.2.3.4 
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion according to rules
      </h5>
      <a
        class="external-link"
        href="https://prosite.expasy.org/unirule/PRU100210"
        target="_blank"
      >
        PRU100210
        <svg
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 39`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 40`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 41`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684uM for sub1 
        <span
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          role="button"
          tabindex="0"
        >
          <svg
            fill="none"
            height="12"
            viewBox="0 0 10 15"
            width="12"
          >
            <path
              clip-rule="evenodd"
              d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
              fill="#4E5A71"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </span>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
        >
          <div>
            <h5>
              Automatic assertion according to rules
            </h5>
            <a
              class="external-link"
              href="https://prosite.expasy.org/unirule/PRU10028"
              target="_blank"
            >
              PRU10028
              <svg
                viewBox="0 0 576 512"
                width="12.5"
              >
                <path
                  d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
                />
              </svg>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <span
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://prosite.expasy.org/unirule/PRU10028"
            target="_blank"
          >
            PRU10028
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 42`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 43`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 44`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 45`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://prosite.expasy.org/unirule/PRU10028"
          target="_blank"
        >
          PRU10028
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 46`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://prosite.expasy.org/unirule/PRU10028"
          target="_blank"
        >
          PRU10028
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 47`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 48`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://prosite.expasy.org/unirule/PRU10028"
          target="_blank"
        >
          PRU10028
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 49`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-platinum"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-sea-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-sea-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 50`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      target="_blank"
    >
      sequence
      <svg
        viewBox="0 0 576 512"
        width="12.5"
      >
        <path
          d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001361"
          target="_blank"
        >
          PIRNR001361
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 51`] = `
<DocumentFragment>
  <a
    href="//www.uniprot.org/keywords/KW-11111"
  >
     #keyword value
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 52`] = `
<DocumentFragment>
  <a
    href="//www.uniprot.org/keywords/KW-11111"
  >
     #KW-11111
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 53`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 54`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 55`] = `
<DocumentFragment>
  <span
    class="uniprot-title__status icon--reviewed"
  >
    <svg
      height="512"
      viewBox="0 0 426 512"
      width="426"
    >
      <path
        d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 56`] = `
<DocumentFragment>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 57`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 58`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 59`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 60`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 61`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 62`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 63`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 64`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 65`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="expandable-list no-bullet"
    />
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 66`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 67`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <h3>
      molecule value
    </h3>
    <div>
      <strong>
        location value
      </strong>
       
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://www.uniprot.org/unirule/PIRNR001361"
            target="_blank"
          >
            PIRNR001361
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
      : topology value 
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://www.uniprot.org/unirule/PIRNR001361"
            target="_blank"
          >
            PIRNR001361
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
    <section
      class="text-block"
    >
      value
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          fill="none"
          height="12"
          viewBox="0 0 10 15"
          width="12"
        >
          <path
            clip-rule="evenodd"
            d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
            fill="#4E5A71"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <a
            class="external-link"
            href="https://www.uniprot.org/unirule/PIRNR001361"
            target="_blank"
          >
            PIRNR001361
            <svg
              viewBox="0 0 576 512"
              width="12.5"
            >
              <path
                d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
              />
            </svg>
          </a>
        </div>
      </div>
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 68`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 69`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 70`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 71`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 72`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001360"
          target="_blank"
        >
          PIRNR001360
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 73`] = `
<DocumentFragment>
  <h3>
    Disease Id (someAcron)
  </h3>
  <span
    class="text-block"
  >
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        fill="none"
        height="12"
        viewBox="0 0 10 15"
        width="12"
      >
        <path
          clip-rule="evenodd"
          d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
          fill="#4E5A71"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <a
          class="external-link"
          href="https://www.uniprot.org/unirule/PIRNR001362"
          target="_blank"
        >
          PIRNR001362
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </span>
  <div
    class="info-list"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Note
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="expandable-list no-bullet"
        >
          <li>
            value2
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          Description
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        some description
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        <h5
          class="bold"
        >
          See also
        </h5>
      </div>
      <div
        class="info-list__item__content"
      >
        <a
          class="external-link"
          href="https://www.omim.org/entry/3124"
          target="_blank"
        >
          3124
          <svg
            viewBox="0 0 576 512"
            width="12.5"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
          
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 74`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 75`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 76`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 77`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 78`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 79`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 80`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 81`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 82`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 83`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 84`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 85`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 86`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 87`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 88`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 89`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 90`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 91`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 92`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 93`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 94`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        href="/citations/somepID1"
      >
        somepID1
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID2"
      >
        somepID2
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID3"
      >
        somepID3
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID4"
      >
        somepID4
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID5"
      >
        somepID5
      </a>
    </li>
    <li>
      <button
        class="button tertiary"
        data-testid="expandable-message"
        type="button"
      >
        More items
      </button>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 95`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 96`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 97`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 98`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 99`] = `
<DocumentFragment>
  20
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 100`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 101`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 102`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 103`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 104`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 105`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 106`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 107`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 108`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 109`] = `
<DocumentFragment>
  9606
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 110`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 111`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 112`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 113`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 114`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 115`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 116`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 117`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 118`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 119`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 120`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 121`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 122`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 123`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 124`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 125`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 126`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 127`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 128`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 129`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 130`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 131`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 132`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 133`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 134`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 135`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 136`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 137`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 138`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 139`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 140`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 141`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 142`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 143`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 144`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 145`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 146`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 147`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 148`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 149`] = `
<DocumentFragment>
  <ul
    class="expandable-list no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ensembl.org/id/id value"
        target="_blank"
      >
        id value
        <svg
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
          />
        </svg>
      </a>
       
      <a
        class="external-link"
        href="https://www.ensembl.org/id/description value"
        target="_blank"
      >
        description value
        <svg
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
          />
        </svg>
      </a>
       [
      <a
        href="#Q9NXB0-1"
      >
        Q9NXB0-1
      </a>
      ]
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 150`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 151`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 152`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 153`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 154`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 155`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 156`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 157`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 158`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 159`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 160`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 161`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 162`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 163`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 164`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 165`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 166`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 167`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 168`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 169`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 170`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 171`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 172`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 173`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 174`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 175`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 176`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 177`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 178`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 179`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 180`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 181`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 182`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 183`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 184`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 185`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 186`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 187`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 188`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 189`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 190`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 191`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 192`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 193`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 194`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 195`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 196`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 197`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 198`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 199`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 200`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 201`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 202`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 203`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 204`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 205`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 206`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 207`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 208`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 209`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 210`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 211`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 212`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 213`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 214`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 215`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 216`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 217`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 218`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 219`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 220`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 221`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 222`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 223`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 224`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 225`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 226`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 227`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 228`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 229`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 230`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 231`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 232`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 233`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 234`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 235`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 236`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 237`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 238`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 239`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 240`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 241`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 242`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 243`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 244`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 245`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 246`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 247`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 248`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 249`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 250`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 251`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 252`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 253`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 254`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 255`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 256`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 257`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 258`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 259`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 260`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 261`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 262`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 263`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 264`] = `<DocumentFragment />`;
